tests/test_assets/semantic/invalid/definite_assignment/read_modify_before_initialization.cog
compound_read::() -> void {
    value: i32;
    value += 1;
}

increment_read::() -> void {
    value: i32;
    value++;
}

decrement_read::() -> void {
    value: i32;
    value--;
}
