tests/test_assets/semantic/invalid/definite_assignment/read_modify_before_initialization.expected
semantic error at line 3: variable 'value' may be uninitialized
semantic error at line 8: variable 'value' may be uninitialized
semantic error at line 13: variable 'value' may be uninitialized
3 semantic errors generated.
